<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Decimal Clock</string>

    <!-- Menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="nav_go_back">Go back</string>

    <!-- Clock -->
    <string name="clock_ten_hour">10 hour time</string>
    <string name="clock_twenty_four_hour">24 hour time</string>

    <!-- Preferences -->

    <string name="prefs_general">General</string>

    <!-- Theme preferences -->
    <string name="prefs_theme">Theme</string>
    <string name="prefs_theme_light">Light</string>
    <string name="prefs_theme_dark">Dark</string>
    <string name="prefs_theme_system_default">System Default</string>


    <!-- Clock preferences -->
    <string name="prefs_clock">Clock</string>

    <string name="prefs_clock_style">Style</string>
    <string name="prefs_clock_analog">Analog</string>
    <string name="prefs_clock_digital">Digital</string>

    <string name="prefs_format_digital">Decimal time format</string>
    <string name="prefs_digital_standard">5:67:89</string>
    <string name="prefs_digital_decimal">5.6789</string>
    <string name="prefs_digital_percentage">56.789%</string>

    <string name="prefs_precision">Precision</string>
    <string name="prefs_precision_low">Low</string>
    <string name="prefs_precision_medium">Medium</string>
    <string name="prefs_precision_high">High</string>

    <!-- Calendar -->
    <string name="calendar_january">January</string>
    <string name="calendar_february">February</string>
    <string name="calendar_march">March</string>
    <string name="calendar_april">April</string>
    <string name="calendar_may">May</string>
    <string name="calendar_june">June</string>
    <string name="calendar_sol">Sol</string>
    <string name="calendar_july">July</string>
    <string name="calendar_august">August</string>
    <string name="calendar_september">September</string>
    <string name="calendar_october">October</string>
    <string name="calendar_november">November</string>
    <string name="calendar_december">December</string>

    <string name="calendar_st">st</string>
    <string name="calendar_nd">nd</string>
    <string name="calendar_rd">rd</string>
    <string name="calendar_th">th</string>

    <!-- Font preferences -->
    <string name="prefs_font_casual" translatable="false">Casual</string>
    <string name="prefs_font_regular" translatable="false">Regular</string>
    <string name="prefs_font_thin" translatable="false">Thin</string>
    <string name="prefs_font_cursive" translatable="false">Cursive</string>

    <string name="prefs_blinking_separators">Blinking separators</string>

    <string name="prefs_change_time">Change date &amp; time</string>

    <string name="prefs_about">About</string>
    <string name="prefs_about_app">About Decimal Clock</string>

    <!-- AppWidgets -->
    <string name="appwidget_ten_hour_clock_digital">10 Hour Clock</string>
    <string name="appwidget_loading">Loading…</string>
    <string name="appwidget_add">Add homescreen widget</string>

    <!-- About page -->
    <string name="about_app_logo_description">App logo</string>
    <string name="about_version_format" translatable="false">v<xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="about_app_description">In the 10 hour clock, there are ten hours in a day, one hundred minutes in an hour, and one hundred seconds in a minute. </string>
    <string name="about_contact_heading">Bugs / Suggestions / Support</string>
    <string name="about_twitter" translatable="false">\@tenhourstudios</string>
    <string name="about_email" translatable="false">hello@tenhourstudios.com</string>

    <!-- Services -->
    <string name="service_clock_update_description">Updates homescreen widgets</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Homescreen Widget Update</string>
    <string name="notification_channel_description">This notification is needed to reliably update homescreen widgets.</string>
    <string name="notification_title">Homescreen widgets present</string>
    <string name="notification_message">Updating widgets every minute</string>
    <string name="notification_ticker_text">Homescreen widgets present. This notification is needed to update homescreen widgets.</string>

    <!-- links -->
    <string name="twitter_link" translatable="false">https://twitter.com/tenhourstudios</string>
    <string name="email_id" translatable="false">mailto:hello@tenhourstudios.com</string>
</resources>