<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/clockFragment">
    <fragment
        android:id="@+id/clockFragment"
        android:name="com.tenhourstudios.decimalclock.ui.ClockFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_clock" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tenhourstudios.decimalclock.ui.SettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.tenhourstudios.decimalclock.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />
    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />
</navigation>